syntax = "proto3";
import "Models/Proto/Common/uuid.proto";
import "Models/Proto/Common/status_codes.proto";
import "Models/Proto/EducationalInstitutionAPI/response_messages_data.proto";

option csharp_namespace = "Aggregator.EducationalInstitutionAPI.Proto";

//Command Responses
message EducationalInstitutionCreateResponse{
	BaseCommandResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message EducationalInstitutionDeleteResponse{
	DeleteCommandResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message EducationalInstitutionUpdateResponse{
	bool operation_status=1;
	string message=2;
	ProtoHttpStatusCode status_code=3;
}

//Query Responses
message EducationalInstitutionGetResponse{
	GetByIDQueryResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message EducationalInstitutionGetByNameResponse{
	repeated GetByNameResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message EducationalInstitutionsGetByBuildingResponse{
	repeated BaseQueryResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message EducationalInstitutionsGetByLocationResponse{
	repeated GetByLocationResult data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}

message AdminsGetByEducationalInstitutionIdResponse{
	repeated string data=1;
	bool operation_status=2;
	string message=3;
	ProtoHttpStatusCode status_code=4;
}