syntax = "proto3";
import "Presentation/Proto/uuid.proto";

option csharp_namespace = "EducationalInstitutionAPI.Proto";

//Command Requests
message EducationalInstitutionCreateRequest{
	string name=1;
	string description=2;
	string location_id=3;
	repeated string buildings=4;
	Uuid parent_institution_id=5;
	repeated Uuid admins_ids=6;
}

message EducationalInstitutionDeleteRequest{
	Uuid educational_institution_id=1;
}

message EducationalInstitutionUpdateRequest{
	Uuid educational_institution_id=1;
	bool update_name=2;
	string name=3;
	bool update_description=4;
	string description=5;
}

message EducationalInstitutionAdminUpdateRequest{
	Uuid educational_institution_id=1;
	repeated Uuid add_admins_ids=2;
	repeated Uuid remove_admins_ids=3;
}

message EducationalInstitutionParentUpdateRequest{
	Uuid educational_institution_id=1;
	Uuid parent_institution_id=2;
}

message EducationalInstitutionLocationUpdateRequest{
	Uuid educational_institution_id=1;
    bool update_location=2;
	string location_id=3;
	bool update_buildings=4;
    repeated string add_buildings_ids=5;
    repeated string remove_buildings_ids=6;
}

//Query Requests
message EducationalInstitutionGetByIdRequest{
	Uuid educational_institution_id=1;
}

message EducationalInstitutionGetByNameRequest{
	string name=1;
	int32 offset_value=2;
	int32 results_count=3;
}

message EducationalInstitutionsGetByBuildingRequest{
	string building_id=1;
}

message EducationalInstitutionsGetByLocationRequest{
	string location_id=1;
}

message AdminsGetByEducationalInstitutionIdRequest{
	Uuid educational_institution_id=1;
}